--- a/src/react-app/App.css
+++ b/src/react-app/App.css
@@ -21,11 +21,26 @@ img {
 .container {
   max-width: 450px;
   width: 95%;
-  /* margin: 0 auto; */
   text-align: center;
-  /* padding: 2rem 1rem; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* gap: 1.5rem; */
+
+  /* Animación */
+  animation: pop-in 0.8s ease-out forwards;
+  opacity: 0;
+  /* para que inicie invisible y se revele con la animación */
+  transform: scale(0.95);
+}
+
+@keyframes pop-in {
+  0% {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
